<?xml version="1.0" encoding="utf-8"?> 
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceScreen
        android:key="@string/button_simplenote_category_key"
        android:title="@string/simplenote"
        android:persistent="false"
        >
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="com.morningwoodsoftware.android.noteomatic"
            android:targetClass="com.morningwoodsoftware.android.noteomatic.activity.PrefsSimplenoteActivity"
            />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="@string/button_sorting_category_key"
        android:title="@string/sorting"
        android:persistent="false"
        >
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="com.morningwoodsoftware.android.noteomatic"
            android:targetClass="com.morningwoodsoftware.android.noteomatic.activity.PrefsSortingActivity"
            />
    </PreferenceScreen>
    <!--
    <PreferenceScreen
        android:key="@string/button_sync_category_key"
        android:title="@string/sync"
        android:persistent="false"
        >
        <intent android:action="android.intent.action.VIEW"
            android:targetPackage="com.morningwoodsoftware.android.noteomatic"
            android:targetClass="com.morningwoodsoftware.android.noteomatic.activity.PrefsSyncActivity"
            />
    </PreferenceScreen>
    -->
</PreferenceScreen> 


